--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
         <div class="section-intro-photo">
           <img
             class="intro img"
-            src="/images/Ellipse-1.png"
-            alt="Ellipse-1.png"
+            src="./img/Ellipse-1.png"
             width="243"
             height="243"
           />
