--- a/index.html
+++ b/index.html
@@ -1,35 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio UI</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;700;900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-  <header class="header">
-    <nav class="header-nav">
-      <ul class="header-menu">
-        <li class="header-menu-item">
-          <a href="#" class="header-link">Works</a>
-        </li>
-        <li class="header-menu-item">
-          <a href="#" class="header-link">Blog</a>
-        </li>
-        <li class="header-menu-item">
-          <a href="#" class="header-link">Contact</a>
-        </li>
-      </ul>
-    </nav>
-  </header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Portfolio UI</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <header class="header">
+      <nav class="header-nav">
+        <ul class="header-menu">
+          <li class="header-menu-item">
+            <a href="#" class="header-link">Works</a>
+          </li>
+          <li class="header-menu-item">
+            <a href="#" class="header-link">Blog</a>
+          </li>
+          <li class="header-menu-item">
+            <a href="#" class="header-link">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
 
-  <main>
-
-  </main>
-  
-</body>
+    <main>
+      <section class="intro">
+        <div class="section-col">
+          <h1 class="intro-title">Hi, I am John, Creative Technologist</h1>
+          <p class="intro-description">
+            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+            sint. Velit officia consequat duis enim velit mollit. Exercitation
+            veniam consequat sunt nostrud amet.
+          </p>
+          <a href="#" download class="intro-link">Download Resume</a>
+        </div>
+        <div class="section-col">
+          <img src="./images/img.png" alt="Photo" class="intro-img" />
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
