Add section intro

--- a/index.html
+++ b/index.html
@@ -28,6 +28,20 @@
   </header>
 
   <main>
+    <section class="intro">
+      <div class="section-col">
+        <h1 class="intro-title">Hi, I am John, Creative Technologist</h1>
+        <p class="intro-description">
+          Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+          sint. Velit officia consequat duis enim velit mollit. Exercitation
+          veniam consequat sunt nostrud amet.
+        </p>
+        <a href="#download" class="btn">Download Resume</a>
+      </div>
+      <div class="section-col">
+        <img src="images/intro.png" alt="Photo" class="intro-img" />
+      </div>
+    </section> 
 
   </main>
   
