--- a/index.html
+++ b/index.html
@@ -43,6 +43,33 @@
       </div>
     </section> 
 
+    <section class="blog" id="blog">
+      <h2 class="section title">Recent posts</h2>
+      <a href="#" class="blog-link">View all</a>
+      <ul class="blog-list">
+        <li class="blog-item">
+          <h3 class="blog-position">Making a design system from scratch</h3> 
+          <p class="blog-date">12 Feb 2020</p>
+          <p class="blog-theme">Design, Pattern</p>
+          <p class="blog-description">
+            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+            sint. Velit officia consequat duis enim velit mollit. Exercitation
+            veniam consequat sunt nostrud amet.
+          </p>
+        </li>
+        <li class="blog-item">
+          <h3 class="blog-position">Creating pixel perfect icons in Figma</h3>
+          <p class="blog-date">12 Feb 2020</p>
+          <p class="blog-theme">Figma, Icon Design</p>
+          <p class="blog-description">
+            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+            sint. Velit officia consequat duis enim velit mollit. Exercitation
+            veniam consequat sunt nostrud amet.
+          </p>
+        </li>
+      </ul>
+    </section>
+
   </main>
   
 </body>
