add section works

--- a/index.html
+++ b/index.html
@@ -70,6 +70,45 @@
       </ul>
     </section>
 
+
+<section class="works" id="works">
+        <h2 class="section-title">Featured works</h2>
+        <ul class="works-list">
+          <li class="works-item">
+            <h3 class="works-title">Designing Dashboards</h3>
+            <p class="works-year">2020</p>
+            <p class="works-name">Dashboards</p>
+            <img src="images/work1.png" alt="Dashboard" class="work-img" />
+            <p class="works-description">
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+              amet sint. Velit officia consequat duis enim velit mollit.
+              Exercitation veniam consequat sunt nostrud amet.
+            </p>
+          </li>
+          <li class="works-item">
+            <h3 class="works-title">Vibrant Portraits of 2020</h3>
+            <p class="works-year">2018</p>
+            <p class="works-name">Illustration</p>
+            <img src="images/work2.png" alt="Illustration" class="work-img" />
+            <p class="works-description">
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+              amet sint. Velit officia consequat duis enim velit mollit.
+              Exercitation veniam consequat sunt nostrud amet.
+            </p>
+          </li>
+          <li class="works-item">
+            <h3 class="works-title">36 Days of Malayalam type</h3>
+            <p class="works-year">2018</p>
+            <p class="works-name">Typography</p>
+            <img src="images/work3.png" alt="Typography" class="work-img" />
+            <p class="works-description">
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+              amet sint. Velit officia consequat duis enim velit mollit.
+              Exercitation veniam consequat sunt nostrud amet.
+            </p>
+          </li>
+        </ul>
+      </section>
   </main>
   
 </body>
