--- a/index.html
+++ b/index.html
@@ -45,6 +45,37 @@
           <img src="./images/img.png" alt="Photo" class="intro-img" />
         </div>
       </section>
+
+      <section class="posts">
+        <h2 class="section-posts-title">Recent posts</h2>
+        <a href="#" target="_blank" class="posts-link">View all</a>
+        <ul class="posts-list">
+          <li class="posts-item">
+            <h3 class="posts-title">Making a design system from scratch</h3>
+            <p class="posts-info">
+              <span class="posts-date">12 Feb 2020</span>
+              <span class="posts-course">Design, Pattern</span>
+            </p>
+            <p class="posts-description">
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+              amet sint. Velit officia consequat duis enim velit mollit.
+              Exercitation veniam consequat sunt nostrud amet.
+            </p>
+          </li>
+          <li class="posts-item">
+            <h3 class="posts-title">Creating pixel perfect icons in Figma</h3>
+            <p class="posts-info">
+              <span class="posts-date">12 Feb 2020</span>
+              <span class="posts-course">Figma, Icon Design</span>
+            </p>
+            <p class="posts-description">
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+              amet sint. Velit officia consequat duis enim velit mollit.
+              Exercitation veniam consequat sunt nostrud amet.
+            </p>
+          </li>
+        </ul>
+      </section>
     </main>
   </body>
 </html>
