--- a/index.html
+++ b/index.html
@@ -78,6 +78,71 @@
           </li>
         </ul>
       </section>
+
+      <section class="works">
+        <h2 class="section-works-title">Featured works</h2>
+        <ul class="works-list">
+          <li class="works-item">
+            <a href="#" class="works-link">
+              <img
+                src="./images/Dashboard.png"
+                alt="Dashboard"
+                class="works-dashboard-img"
+              />
+            </a>
+            <h3 class="works-title">Designing Dashboards</h3>
+            <p class="works-info">
+              <span class="date">2020</span>
+              <span class="material">Dashboard</span>
+            </p>
+            <p class="works-description">
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+              amet sint. Velit officia consequat duis enim velit mollit.
+              Exercitation veniam consequat sunt nostrud amet.
+            </p>
+          </li>
+
+          <li class="works-item">
+            <a href="#" class="works-link">
+              <img
+                src="./images/Illustration.png"
+                alt="Illustration"
+                class="works-illustration-img"
+              />
+            </a>
+            <h3 class="works-title">Vibrant Portraits of 2020</h3>
+            <p class="works-info">
+              <span class="date">2018</span
+              ><span class="material">Illustration</span>
+            </p>
+            <p class="works-description">
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+              amet sint. Velit officia consequat duis enim velit mollit.
+              Exercitation veniam consequat sunt nostrud amet.
+            </p>
+          </li>
+
+          <li class="works-item">
+            <a href="#" class="works-link">
+              <img
+                src="./images/Typography.png"
+                alt="Typography"
+                class="works-typography-img"
+              />
+            </a>
+            <h3 class="works-title">36 Days of Malayalam type</h3>
+            <p class="works-info">
+              <span class="date">2018</span>
+              <span class="material">Typography</span>
+            </p>
+            <p class="works-description">
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+              amet sint. Velit officia consequat duis enim velit mollit.
+              Exercitation veniam consequat sunt nostrud amet.
+            </p>
+          </li>
+        </ul>
+      </section>
     </main>
   </body>
 </html>
