--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </p>
           <a href="#download" class="btn">Download Resume</a>
         </div>
-        <div class="section-col">
+        <div class="section">
           <img src="images/intro.png" alt="Photo" class="intro-img" />
         </div>
       </section>
